# aingle

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  GEMINI.md  LICENSE  LICENSE-APACHE  LICENSE-COMMERCIAL  Makefile  NOTICE  PATENTS  README.md  SECURITY.md  config.nix  docker-compose.yml
crates/adk/: CHANGELOG.md  Cargo.toml  README.md
crates/adk/src/: adk.rs  capability.rs  chain.rs  ed25519.rs  entry.rs  graph.rs  hash_path.rs  info.rs  lib.rs  link.rs  map_extern.rs  memory.rs  p2p.rs  prelude.rs  random.rs  time.rs  trace.rs  x_salsa20_poly1305.rs
crates/adk_derive/: Cargo.toml  README.md
crates/adk_derive/src/: lib.rs
crates/ai/: CHANGELOG.md  Cargo.toml  README.md
crates/ai/src/: lib.rs
crates/ai_hash/: Cargo.toml  README.md
crates/ai_hash/src/: aliases.rs  encode.rs  encode_raw.rs  error.rs  fixt.rs  has_hash.rs  hash.rs  hash_b64.rs  hash_ext.rs  hash_type.rs  hashable_content.rs  hashed.rs  lib.rs  ser.rs  tests.rs
crates/ai_sandbox/: Cargo.toml  README.md
crates/ai_sandbox/examples/: setup_5.rs
crates/ai_sandbox/src/: bundles.rs  calls.rs  cli.rs  cmds.rs  config.rs  generate.rs  lib.rs  ports.rs  run.rs  sandbox.rs  save.rs
crates/ai_sandbox/tests/: cli.rs
crates/aingle/: CHANGELOG.md  Cargo.toml  README.md
crates/aingle/benches/: bench.rs  consistency.rs
crates/aingle/src/: conductor.rs  core.rs  fixt.rs  lib.rs  local_network_tests.rs  perf.rs  test_utils.rs
crates/aingle/tests/: agent_scaling.rs  authored_test.rs  inline_zome_spec.rs  multi_conductor.rs  network_tests.rs  ser_regression.rs  sgd_arc.rs  speed_tests.rs  test_cli.rs  test_utils.rs  websocket.rs
crates/aingle_ai/: Cargo.toml  README.md
crates/aingle_ai/src/: config.rs  error.rs  lib.rs  types.rs
crates/aingle_cascade/: Cargo.toml  README.md
crates/aingle_cascade/src/: agent_activity.rs  authority.rs  error.rs  lib.rs  test_utils.rs
crates/aingle_cascade/tests/: get_activity.rs  get_entry.rs  get_links.rs
crates/aingle_conductor_api/: Cargo.toml  README.md
crates/aingle_conductor_api/src/: admin_interface.rs  app_interface.rs  config.rs  lib.rs  signal_subscription.rs  state_dump.rs
crates/aingle_contracts/: Cargo.toml  README.md
crates/aingle_contracts/src/: contract.rs  error.rs  lib.rs  runtime.rs  storage.rs  types.rs
crates/aingle_cortex/: COMPLETION_REPORT.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  PROOFS_README.md  README.md  openapi.yaml
crates/aingle_cortex/examples/: ground_vault.rs
crates/aingle_cortex/src/: client.rs  cluster_init.rs  embedder.rs  error.rs  lib.rs  main.rs  server.rs  state.rs  wasm_types.rs
crates/aingle_cortex/tests/: cluster_integration_test.rs  data_integrity_test.rs  graphql_subscriptions_test.rs  mcp_http_integration.rs  mcp_integration.rs  mcp_oauth_integration.rs  proof_system_test.rs  rate_limiting_test.rs
crates/aingle_graph/: Cargo.toml  README.md
crates/aingle_graph/benches/: graph_bench.rs
crates/aingle_graph/src/: crdt.rs  error.rs  index.rs  lib.rs  node.rs  predicate.rs  query.rs  store.rs  triple.rs  value.rs
crates/aingle_graph/tests/: graph_integration_tests.rs
crates/aingle_ingest/: Cargo.toml
crates/aingle_ingest/src/: cards.rs  chunk.rs  lib.rs  markdown.rs  tasks.rs
crates/aingle_keystore/: Cargo.toml  README.md
crates/aingle_keystore/src/: agent_pubkey_ext.rs  crude_mock_keystore.rs  error.rs  keystore_actor.rs  lair_keystore.rs  lib.rs  test_keystore.rs
crates/aingle_logic/: Cargo.toml  README.md
crates/aingle_logic/src/: builtin.rs  engine.rs  error.rs  lib.rs  proof.rs  rule.rs  validator.rs
crates/aingle_minimal/: CHANGELOG.md  Cargo.toml  README.md  aingle_iot.db  aingle_lowpower.db
crates/aingle_minimal/benches/: node_bench.rs
crates/aingle_minimal/src/: bluetooth.rs  coap.rs  config.rs  crypto.rs  discovery.rs  dtls.rs  error.rs  gossip.rs  graph.rs  lib.rs  main.rs  memory.rs  network.rs  node.rs  ota.rs  power.rs  quic.rs  rest.rs  rocks_storage.rs  sensors.rs  smart.rs  storage.rs  storage_factory.rs  storage_trait.rs  sync.rs  types.rs  wallet.rs  webrtc.rs
crates/aingle_minimal/tests/: e2e_multi_node_tests.rs  iot_integration_tests.rs  p2p_network_tests.rs  smart_node_integration_tests.rs  transport_integration_tests.rs
crates/aingle_p2p/: Cargo.toml  README.md
crates/aingle_p2p/src/: lib.rs  spawn.rs  test.rs  types.rs
crates/aingle_raft/: Cargo.toml
crates/aingle_raft/src/: consistency.rs  lib.rs  log_store.rs  network.rs  snapshot_builder.rs  state_machine.rs  types.rs
crates/aingle_sqlite/: Cargo.toml  README.md
crates/aingle_sqlite/src/: conn.rs  db.rs  error.rs  exports.rs  fatal.rs  lib.rs  prelude.rs  schema.rs  sql.rs  swansong.rs  table.rs  test_utils.rs
crates/aingle_state/: Cargo.toml  README.md
crates/aingle_state/src/: entry_def.rs  host_fn_workspace.rs  lib.rs  mutations.rs  prelude.rs  query.rs  saf_def.rs  scratch.rs  source_chain.rs  test_utils.rs  validation_db.rs  validation_receipts.rs  wasm.rs  workspace.rs
crates/aingle_types/: CHANGELOG.md  Cargo.toml  README.md
crates/aingle_types/src/: access.rs  activity.rs  app.rs  autonomic.rs  chain.rs  db.rs  element.rs  entry.rs  env.rs  fixt.rs  header.rs  lib.rs  link.rs  macros.rs  metadata.rs  prelude.rs  properties.rs  saf.rs  sgd_op.rs  signal.rs  test_utils.rs  timestamp.rs  validate.rs
crates/aingle_util/: Cargo.toml  README.md
crates/aingle_util/src/: lib.rs  tokio_helper.rs
crates/aingle_viz/: Cargo.toml  FEATURES.md  INTEGRATION.md  README.md
crates/aingle_viz/src/: api.rs  dag.rs  error.rs  events.rs  lib.rs  main.rs  server.rs
crates/aingle_viz/web/: index-enhanced.html  index.html
crates/aingle_wal/: Cargo.toml
crates/aingle_wal/src/: entry.rs  lib.rs  reader.rs  (+2 more)
crates/aingle_websocket/: Cargo.toml  README.md
crates/aingle_zk/: BATCH_VERIFICATION.md  Cargo.toml  README.md
crates/aingle_zome_types/: CHANGELOG.md  Cargo.toml  README.md
crates/fixt/: Cargo.toml  README.md
crates/hope_agents/: COMPLETION_SUMMARY.md  Cargo.toml  HOPE_ORCHESTRATOR.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  README_HOPE_AGENT.md
(+840 files in other folders)
