[workspace]
resolver = "2"
members = [
  # ── Product crates ──────────────────────────────────────────────
  "crates/aingle_graph",        # Native Semantic GraphDB
  "crates/aingle_zk",           # Zero-Knowledge Proofs (Privacy)
  "crates/ineru",               # Ineru Memory System
  "crates/aingle_ai",           # AI Integration Layer
  "crates/aingle_logic",        # Proof-of-Logic Validation Engine
  "crates/kaneru",              # Kaneru — Unified Multi-Agent Execution System
  "crates/aingle_cortex",       # Córtex API (REST/GraphQL/SPARQL)
  "crates/aingle_minimal",      # IoT-optimized minimal node
  "crates/aingle_contracts",    # Smart Contracts (DSL + WASM Runtime)
  "crates/aingle_viz",          # DAG Visualization Server
  "crates/aingle_wal",          # Write-Ahead Log (clustering)
  "crates/aingle_raft",         # Raft consensus (clustering)

  # ── Examples ────────────────────────────────────────────────────
  "examples/iot_sensor_network",
  "examples/ai_autonomous_agent",
  "examples/dag_visualization",
  "examples/semantic_queries",
]

exclude = [
  # Legacy Holochain-derived crates (not part of the product build)
  "crates/ai_fixt",
  "crates/ai_fixt/test",
  "crates/adk",
  "crates/adk_derive",
  "crates/ai_hash",
  "crates/mr_bundle",
  "crates/ai",
  "crates/ai_bundle",
  "crates/ai_sandbox",
  "crates/aingle",
  "crates/aingle_cascade",
  "crates/aingle_conductor_api",
  "crates/aingle_p2p",
  "crates/aingle_keystore",
  "crates/aingle_sqlite",
  "crates/aingle_state",
  "crates/aingle_types",
  "crates/aingle_websocket",
  "crates/aingle_util",
  "crates/aingle_zome_types",
  "crates/kitsune_p2p/bootstrap",
  "crates/kitsune_p2p/direct",
  "crates/kitsune_p2p/direct_api",
  "crates/kitsune_p2p/direct_test",
  "crates/kitsune_p2p/kitsune_p2p",
  "crates/kitsune_p2p/mdns",
  "crates/kitsune_p2p/proxy",
  "crates/kitsune_p2p/transport_quic",
  "crates/kitsune_p2p/types",
  "crates/test_utils/wasm",
  "crates/test_utils/wasm_common",
  "crates/diagnostics",
  "examples/semantic_compliance",
  "examples/deep_context",
]

# These are the default params for RELEASE target
# Setting these for all dependencies... we'll only debug our own code
[profile.dev.package."*"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16

# Workspace-wide lints configuration
[workspace.lints.rustdoc]
bare_urls = "allow"
invalid_html_tags = "allow"
broken_intra_doc_links = "allow"
invalid_rust_codeblocks = "allow"
redundant_explicit_links = "allow"

# Workspace dependencies - ensure rustls uses ring crypto provider
[workspace.dependencies]
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
