[package]
name = "adk"
version = "0.0.1"
description = "The AIngle ADK"
license = "Apache-2.0"
homepage = "https://apilium.com"
repository = "https://github.com/ApiliumCode/aingle"
documentation = "https://docs.rs/adk"
authors = ["Apilium Technologies <hello@apilium.com>"]
keywords = [ "aingle", "ai", "adk" ]
categories = [ "cryptography" ]
edition = "2021"
rust-version = "1.85"

[lib]
crate-type = [ "cdylib", "rlib" ]
path = "src/lib.rs"

[features]
default = []
mock = ["adk_derive/mock", "mockall"]
test_utils = [ "aingle_zome_types/test_utils" ]

[dependencies]
adk_derive = { version = "^0.0.1", path = "../adk_derive" }
ai_hash = { version = "0.0.1", path = "../ai_hash", default-features = false, features = ["serialized-bytes", "string-encoding"] }
aingle_wasmer_guest = "=0.0.1"  # Pinned for WASM compatibility
aingle_zome_types = { version = "0.0.1", path = "../aingle_zome_types", default-features = false }
aingle_middleware_bytes = "=0.0.3"  # For SerializedBytesError -> WasmError conversion
paste = "1.0"
serde = "1.0"
serde_bytes = "0.11"
thiserror = "2.0"
tracing = "0.1"
tracing-core = "0.1"
mockall = { version = "0.11", optional = true }

[dependencies.tracing-subscriber]
version = "0.3"
features = []

[dev-dependencies]
fixt = { path = "../fixt" }
