[package]
name = "adk_derive"
version = "0.0.1"
description = "derive macros for the aingle adk"
license = "Apache-2.0"
homepage = "https://apilium.com"
repository = "https://github.com/ApiliumCode/aingle"
documentation = "https://docs.rs/adk_derive"
authors = ["Apilium Technologies <hello@apilium.com>"]
keywords = [ "aingle", "ai", "adk" ]
categories = [ "cryptography" ]
edition = "2021"
rust-version = "1.85"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = [ "full", "extra-traits" ] }
quote = "1"
proc-macro2 = "1"
paste = "1.0"
aingle_zome_types = { version = ">=0.0.1", path = "../aingle_zome_types", default-features = false }

[features]
default = []
mock = []
