[package]
name = "aingle_cli"
version = "0.0.1"
description = "Command-line interface for AIngle distributed ledger"
license = "Apache-2.0"
homepage = "https://apilium.com"
repository = "https://github.com/ApiliumCode/aingle"
documentation = "https://docs.rs/aingle_cli"
authors = ["Apilium Technologies <hello@apilium.com>"]
keywords = ["aingle", "ai", "distributed-ledger", "cli"]
categories = ["command-line-utilities", "development-tools::build-utils", "filesystem"]
edition = "2021"

[[bin]]
name = "ai"
path = "src/bin/ai.rs"

[lib]
name = "aingle_cli"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
futures = "0.3"
aingle_cli_bundle = { path = "../ai_bundle", version = "0.0.1" }
aingle_cli_sandbox = { path = "../ai_sandbox", version = "0.0.1" }
observability = { version = "0.1", package = "aingle-observability" }
structopt = "0.3"
tokio = { version = "1", features = [ "full" ] }
