[package]
name = "aingle"
version = "0.0.101"
description = "AIngle, a framework for distributed applications"
license = "Apache-2.0"
homepage = "https://apilium.com"
repository = "https://github.com/ApiliumCode/aingle"
documentation = "https://docs.rs/aingle"
authors = ["Apilium Technologies <hello@apilium.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.21"
byteorder = "1.3.4"
cfg-if = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
derive_more = "0.99.3"
directories = "2.0.2"
either = "1.5.0"
fallible-iterator = "0.3.0"
ai_fixt = { version = "^0.0.1", path = "../ai_fixt" }
futures = "0.3.1"
ghost_actor = "0.3.0-alpha.1"
ai_hash = { version = ">=0.0.1", path = "../ai_hash", features = ["full"] }
aingle_cascade = { version = "0.0.1", path = "../aingle_cascade" }
aingle_conductor_api = { version = "0.0.1", path = "../aingle_conductor_api" }
aingle_ai = { version = "0.1.0", path = "../aingle_ai", optional = true }
aingle_keystore = { version = "0.0.1", path = "../aingle_keystore" }
aingle_p2p = { version = "0.0.1", path = "../aingle_p2p" }
aingle_sqlite = { version = "0.0.1", path = "../aingle_sqlite" }
aingle_middleware_bytes = "=0.0.3"
aingle_state = { version = "0.0.1", path = "../aingle_state" }
aingle_types = { version = "0.0.1", path = "../aingle_types" }
aingle_cortex = { version = "0.2.3", path = "../aingle_cortex", default-features = false, features = ["rest"] }
aingle_wasmer_host = "0.0.1"
aingle_websocket = { version = "0.0.1", path = "../aingle_websocket" }
wasmer = "=6.0.0"
aingle_zome_types = { version = ">=0.0.1", path = "../aingle_zome_types" }
human-panic = "2.0.4"
kitsune_p2p = { version = "0.0.1", path = "../kitsune_p2p/kitsune_p2p" }
kitsune_p2p_types = { version = "0.0.1", path = "../kitsune_p2p/types" }
lazy_static = "1.4.0"
mockall = "0.11"
mr_bundle = { version = "0.0.1", path = "../mr_bundle" }
must_future = "0.1.1"
nanoid = "0.4"
num_cpus = "1.8"
observability = { version = "0.1", package = "aingle-observability" }
once_cell = "1.4.1"
parking_lot = "0.12"
predicates = "1.0.4"
rand = "0.9"
ring = "0.17"
# Ensure rustls uses ring crypto provider for TLS
rustls = { workspace = true }
rusqlite = { version = "0.25" }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0", features = [ "preserve_order" ] }
serde_yml = "0.0.12"
shrinkwraprs = "0.3.0"
structopt = "0.3.11"
strum = "0.26"
tempdir = "0.3.7"
thiserror = "2.0"
tokio = { version = "1", features = [ "full" ] }
tokio-stream = "0.1"
aingle_util = { version = "0.0.1", path = "../aingle_util" }
toml = "0.5.6"
tracing = "0.1"
tracing-futures = "0.2.4"
tracing-subscriber = "0.3"
url = "1.7.2"
url2 = "0.0.6"
url_serde = "0.2.0"
uuid = { version = "1", features = [ "serde", "v4" ] }
crypto_secretbox = "0.1"

# Dependencies for test_utils: keep in sync with below
aingle_wasm_test_utils = { version = "0.0.1", path = "../test_utils/wasm", optional = true }
adk = { version = "0.0.1", path = "../adk", optional = true }
matches = {version = "0.1.8", optional = true }
aingle_test_wasm_common = { version = "0.0.1", path = "../test_utils/wasm_common", optional = true  }
unwrap_to = { version = "0.1.0", optional = true }
itertools = { version = "0.10", optional = true }

[target.'cfg(unix)'.dependencies]
sd-notify = "0.3.0"


[dev-dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
criterion = "0.5"
maplit = "1"
pretty_assertions = "0.7.2"
serial_test = "3.0"
test-case = "3.3"

# Dependencies for test_utils: keep in sync with above
aingle_wasm_test_utils = { version = "0.0.1", path = "../test_utils/wasm", optional = false }
adk = { version = "0.0.1", path = "../adk", optional = false }
matches = {version = "0.1.8", optional = false }
aingle_test_wasm_common = { version = "0.0.1", path = "../test_utils/wasm_common", optional = false  }
unwrap_to = { version = "0.1.0", optional = false }


[[bench]]
name = "bench"
harness = false

[[bench]]
name = "consistency"
harness = false

[lib]
name = "aingle"
path = "src/lib.rs"

[[bin]]
name = "aingle"
path = "src/bin/aingle/main.rs"

[features]
default = ["slow_tests", "test_utils", "only_check_wasms", "no-deps"]

# Exposes additional functionality only needed for integration tests.
# This feature should be turned off for production builds.
test_utils = [
  "adk",
  "aingle_sqlite/test_utils",
  "aingle_state/test_utils",
  "aingle_types/test_utils",
  "aingle_zome_types/test_utils",
  "kitsune_p2p_types/test_utils",
  "itertools",
  "matches",
  "aingle_test_wasm_common",
  "unwrap_to"
]

# Wasm ribosome tests take > 60 seconds - let's only run them in CI
slow_tests = []

# Includes the wasm build script, which we don't need when not building wasms
build_wasms = ['aingle_wasm_test_utils/build']
only_check_wasms = ['aingle_wasm_test_utils/only_check']

# Enables at-rest encryption of the SQLite database.
# Incompatible with "no-deps".
db-encryption = ['aingle_sqlite/db-encryption']

# Compile SQLite from source rather than depending on a library.
# Incompatible with "db-encryption"
no-deps = ['aingle_sqlite/no-deps']

# Enable AI integration layer (Titans Memory, Nested Learning, HOPE Agents)
ai-integration = ['aingle_ai']
