[package]
name = "aingle_cascade"
version = "0.0.1"
description = "Logic for cascading updates to AIngle state and network interaction"
license = "Apache-2.0"
homepage = "https://apilium.com"
repository = "https://github.com/ApiliumCode/aingle"
documentation = "https://docs.rs/aingle_cascade"
authors = ["Apilium Technologies <hello@apilium.com>"]
edition = "2018"

[dependencies]
derive_more = "0.99.3"
either = "1.5"
fallible-iterator = "0.3"
ai_fixt = { version = "^0.0.1", path = "../ai_fixt" }
futures = "0.3"
ghost_actor = "0.3.0-alpha.1"
adk = { version = "^0.0.1", path = "../adk" }
adk_derive = { version = "^0.0.1", path = "../adk_derive" }
ai_hash = { version = ">=0.0.1", path = "../ai_hash", features = ["full"] }
aingle_sqlite = { version = "0.0.1", path = "../aingle_sqlite" }
aingle_p2p = { version = "0.0.1", path = "../aingle_p2p" }
aingle_middleware_bytes = "=0.0.3"
aingle_state = { version = "0.0.1", path = "../aingle_state" }
aingle_types = { version = "0.0.1", path = "../aingle_types" }
aingle_zome_types = { version = ">=0.0.1", path = "../aingle_zome_types" }
observability = { version = "0.1", package = "aingle-observability" }
kitsune_p2p = { version = "0.0.1", path = "../kitsune_p2p/kitsune_p2p" }
serde = { version = "1.0", features = [ "derive" ] }
serde_derive = "1.0"
tokio = { version = "1", features = [ "full" ] }
thiserror = "2.0"
tracing = "0.1"
tracing-futures = "0.2"

async-trait = { version = "0.1", optional = true }
mockall = { version = "0.11", optional = true }

[dev-dependencies]
matches = "0.1"
pretty_assertions = "0.7.2"

[features]
default = ["test_utils"]

test_utils = [
    "async-trait",
    "mockall"
]
