[package]
name = "aingle_contracts"
version = "0.2.0"
description = "Smart Contracts DSL and WASM Runtime for AIngle"
license = "Apache-2.0"
repository = "https://github.com/ApiliumCode/aingle"
homepage = "https://apilium.com"
documentation = "https://docs.rs/aingle_contracts"
authors = ["Apilium Technologies <hello@apilium.com>"]
keywords = ["aingle", "smart-contracts", "wasm", "dsl", "blockchain"]
categories = ["wasm", "database"]
edition = "2021"
rust-version = "1.83"

[features]
default = ["runtime"]
runtime = ["dep:wasmer"]
full = ["runtime"]

[dependencies]
# WASM runtime (optional - for execution)
# Note: default-features = false required for MSRV 1.70 compatibility
# wasmer 6.x uses dep: syntax which doesn't create implicit features
wasmer = { version = "=6.0.0", optional = true, default-features = false, features = ["sys", "cranelift"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing
blake3 = "1.5"
sha2 = "0.10"

# Error handling
thiserror = "2.0"

# Async
tokio = { version = "1", features = ["sync"] }

# Hex encoding
hex = "0.4"

# Logging
tracing = "0.1"

# Storage abstraction
dashmap = "6.0"

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
