[package]
name = "aingle_cortex"
version = "0.4.1"
description = "Córtex API - REST/GraphQL/SPARQL interface for AIngle semantic graphs"
license = "Apache-2.0 OR LicenseRef-Commercial"
repository = "https://github.com/ApiliumCode/aingle"
homepage = "https://apilium.com"
documentation = "https://docs.rs/aingle_cortex"
authors = ["Apilium Technologies <hello@apilium.com>"]
keywords = ["aingle", "api", "graphql", "sparql", "rest"]
categories = ["web-programming", "database"]
edition = "2021"
rust-version = "1.83"

[features]
default = ["rest", "sparql", "auth"]
rest = []
graphql = ["dep:async-graphql", "dep:async-graphql-axum"]
sparql = ["dep:spargebra"]
auth = ["dep:jsonwebtoken", "dep:argon2"]
p2p = ["dep:quinn", "dep:rustls", "dep:rcgen", "dep:ed25519-dalek", "dep:hex"]
p2p-mdns = ["p2p", "dep:mdns-sd", "dep:if-addrs"]
full = ["rest", "graphql", "sparql", "auth"]

[[bin]]
name = "aingle-cortex"
path = "src/main.rs"

[dependencies]
# Core AIngle crates
aingle_graph = { version = "0.4", path = "../aingle_graph", features = ["sled-backend"] }
aingle_logic = { version = "0.4", path = "../aingle_logic" }
aingle_zk = { version = "0.4", path = "../aingle_zk" }
ineru = { version = "0.4", path = "../ineru" }

# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# GraphQL (optional) — 8.0.0-rc for axum 0.8 compatibility
async-graphql = { version = "8.0.0-rc", features = ["chrono", "uuid"], optional = true }
async-graphql-axum = { version = "8.0.0-rc", optional = true }

# SPARQL (optional)
spargebra = { version = "0.4", optional = true }

# Authentication (optional)
jsonwebtoken = { version = "10", features = ["rust_crypto"], optional = true }
argon2 = { version = "0.5", optional = true }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.21", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
rand = "0.9"

# Hashing
blake3 = "1.8"

# Streaming
tokio-stream = { version = "0.1", features = ["sync"] }

# Validation
validator = { version = "0.20", features = ["derive"] }

# Regular expressions (for SPARQL FILTER)
regex = "1.12"

# HTTP client (for CortexInternalClient used by WASM host functions)
# Uses rustls-tls to avoid OpenSSL dependency (enables cross-compilation)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Rate limiting & shared state
dashmap = "6.0"
once_cell = "1.4"

# P2P networking (optional)
quinn = { version = "0.11", optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"], optional = true }
rcgen = { version = "0.13", optional = true }
ed25519-dalek = { version = "2", features = ["rand_core"], optional = true }
hex = { version = "0.4", optional = true }
dirs = "6"
mdns-sd = { version = "0.18", optional = true }
if-addrs = { version = "0.13", optional = true }

[dev-dependencies]
tempfile = "3.26"
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
