[package]
name = "aingle_graph"
version = "0.2.0"
description = "Native GraphDB for AIngle - Semantic triple store with SPO indexes"
license = "Apache-2.0"
repository = "https://github.com/ApiliumCode/aingle"
homepage = "https://apilium.com"
documentation = "https://docs.rs/aingle_graph"
authors = ["Apilium Technologies <hello@apilium.com>"]
keywords = ["aingle", "graph", "rdf", "semantic", "triplestore"]
categories = ["database", "data-structures"]
edition = "2021"
rust-version = "1.83"

[features]
default = ["sled-backend"]
# Storage backends
sled-backend = ["dep:sled"]
rocksdb-backend = ["dep:rocksdb"]
sqlite-backend = ["dep:rusqlite"]
# RDF support
rdf = ["dep:rio_turtle", "dep:rio_api"]
# Full features
full = ["sled-backend", "rocksdb-backend", "sqlite-backend", "rdf"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Hashing
blake3 = "1.5"

# Collections
indexmap = { version = "2.0", features = ["serde"] }

# Error handling
thiserror = "2.0"

# Logging
log = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Storage backends (optional)
sled = { version = "0.34", optional = true }
rocksdb = { version = "0.22", optional = true }
rusqlite = { version = "0.25", features = ["bundled"], optional = true }

# RDF parsing (optional)
rio_turtle = { version = "0.8", optional = true }
rio_api = { version = "0.8", optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.10"

[[bench]]
name = "graph_bench"
harness = false
