[package]
name = "aingle_graph"
version = "0.6.0"
description = "Native GraphDB for AIngle - Semantic triple store with SPO indexes"
license = "Apache-2.0 OR LicenseRef-Commercial"
repository = "https://github.com/ApiliumCode/aingle"
homepage = "https://apilium.com"
documentation = "https://docs.rs/aingle_graph"
authors = ["Apilium Technologies <hello@apilium.com>"]
keywords = ["aingle", "graph", "rdf", "semantic", "triplestore"]
categories = ["database", "data-structures"]
edition = "2021"
rust-version = "1.83"

[features]
default = ["sled-backend"]
# Storage backends
sled-backend = ["dep:sled"]
rocksdb-backend = ["dep:rocksdb"]
sqlite-backend = ["dep:rusqlite"]
# RDF support
rdf = ["dep:rio_turtle", "dep:rio_api"]
# CRDT conflict resolution (for clustering)
crdt = ["dep:uuid"]
# Semantic DAG — hash-linked action history
dag = []
# Signed DAG actions with Ed25519 PKI (requires dag)
dag-sign = ["dag", "dep:ed25519-dalek", "dep:rand"]
# Full features
full = ["sled-backend", "rocksdb-backend", "sqlite-backend", "rdf", "crdt"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0.1", features = ["serde"] }

# Hashing
blake3 = "1.8"

# Collections
indexmap = { version = "2.13", features = ["serde"] }

# Error handling
thiserror = "2.0"

# Logging
log = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Storage backends (optional)
sled = { version = "0.34", optional = true }
rocksdb = { version = "0.24", optional = true }
rusqlite = { version = "0.32", features = ["bundled"], optional = true }

# RDF parsing (optional)
rio_turtle = { version = "0.8", optional = true }
rio_api = { version = "0.8", optional = true }

# CRDT support (optional, for clustering)
uuid = { version = "1", features = ["v4", "serde"], optional = true }

# Ed25519 signing (optional, for dag-sign)
ed25519-dalek = { version = "2", features = ["rand_core"], optional = true }
rand = { version = "0.9", default-features = false, features = ["std", "thread_rng"], optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.26"

[[bench]]
name = "graph_bench"
harness = false
