[package]
name = "aingle_ingest"
version = "0.6.3"
description = "Structural extraction of triples and text chunks from markdown/code for AIngle"
license = "Apache-2.0 OR LicenseRef-Commercial"
edition = "2021"
rust-version = "1.83"

[dependencies]
aingle_graph = { version = "0.6", path = "../aingle_graph", features = ["dag"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.12"
blake3 = "1.8"
once_cell = "1.4"
