[package]
name = "aingle_keystore"
version = "0.0.1"
description = "keystore for libsodium keypairs"
license = "Apache-2.0"
homepage = "https://apilium.com"
repository = "https://github.com/ApiliumCode/aingle"
documentation = "https://docs.rs/aingle_keystore"
authors = ["Apilium Technologies <hello@apilium.com>"]
keywords = [ "aingle", "ai", "nacl", "libsodium", "cryptography" ]
categories = [ "cryptography" ]
edition = "2018"

[dependencies]
ghost_actor = "0.3.0-alpha.1"
ai_hash = { version = ">=0.0.1", path = "../ai_hash", features = ["full"] }
aingle_middleware_bytes = "=0.0.3"
aingle_zome_types = { version = ">=0.0.1", path = "../aingle_zome_types" }
lair_keystore_api = "0.0.11"
lair_keystore_client = "0.0.11"
sodoken = "0.0.4"
serde = { version = "1.0", features = [ "derive" ] }
serde_bytes = "0.11"
thiserror = "2.0"
tokio = { version = "1", features = [ "full" ] }
tracing = "0.1"
